--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+
+{% block title %}Tous les articles{% endblock %}
+
 {% block content %}
     <section>
         {% for article in articles %}
