--- a/templates/socialBase.html.twig
+++ b/templates/socialBase.html.twig
@@ -6,18 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/socialStyle.css') }}">
     {% block stylesheets %}{% endblock %}
     <title>{% block title %}Edit Me !!!!!{% endblock %}</title>
 </head>
 <body>
-{% include 'commons/_header.html.twig' %}
+{% include 'commons/_socialHeader.html.twig' %}
 <main>
-    {% block content %}
+    <aside>
+        <p>Contenu de la sidebar</p>
+    </aside>
+    <section>
+        {% block content %}
 
-    {% endblock %}
+        {% endblock %}
+    </section>
+
 </main>
-{% include 'commons/_footer.html.twig' %}
-{% block javascripts %}{% endblock %}
+{% include 'commons/_socialFooter.html.twig' %}
 </body>
 </html>
